Implement automated incident response with RabbitMQ and AlertManager

--- a/alertmanager/alertmanager.yml
+++ b/alertmanager/alertmanager.yml
@@ -6,13 +6,18 @@ route:
   group_wait: 30s
   group_interval: 5m
   repeat_interval: 12h
-  receiver: 'web.hook'
+  receiver: 'rabbitmq.alerts'
 
 receivers:
   - name: 'web.hook'
     webhook_configs:
       - url: 'http://localhost:3000/alerts'
 
+  - name: 'rabbitmq.alerts'
+    rabbitmq_configs:
+      - uri: 'amqp://guest:guest@rabbitmq:5672/'
+        exchange: ''
+        routing_key: '{{ .CommonLabels.service }}'
 inhibit_rules:
   - source_match:
       severity: 'critical'
