Implement data layer with Entity Framework Core
- Add ApplicationDbContext in shared project

- Create entity models for all core entities (User, Service, Booking, etc.)

- Configure relationships and constraints in DbContext

- Add database migrations for schema creation and updates

- Update UserService to integrate with EF Core

- Add DesignTimeDbContextFactory for migrations support

- Update tests and project files accordingly

--- a/backend/services/UserService/appsettings.json
+++ b/backend/services/UserService/appsettings.json
@@ -10,5 +10,8 @@
     "SecretKey": "YourSuperSecretKey",
     "Issuer": "yourdomain.com",
     "Audience": "yourdomain.com"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AppointmentScheduler;Trusted_Connection=true;MultipleActiveResultSets=true"
   }
 }
