--- a/backend/services/UserService/appsettings.json
+++ b/backend/services/UserService/appsettings.json
@@ -13,5 +13,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AppointmentScheduler;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
+  "Elasticsearch": {
+    "Uri": "http://localhost:9200"
+  },
+  "Jaeger": {
+    "Host": "localhost",
+    "Port": "6831"
   }
 }
