--- a/backend/services/SlotManagementService/SlotManagementService.csproj
+++ b/backend/services/SlotManagementService/SlotManagementService.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
