--- a/backend/services/NotificationService/appsettings.json
+++ b/backend/services/NotificationService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AppointmentSchedulerDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "HangfireConnection": "Server=(localdb)\\MSSQLLocalDB;Database=HangfireDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
