feat: Implement API Gateway with Ocelot and Consul for service discovery and authentication

--- a/backend/services/NotificationService/appsettings.json
+++ b/backend/services/NotificationService/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AppointmentSchedulerDb;Trusted_Connection=True;MultipleActiveResultSets=true",
     "HangfireConnection": "Server=(localdb)\\MSSQLLocalDB;Database=HangfireDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Consul": {
+    "Host": "http://localhost:8500",
+    "ServiceName": "NotificationService"
   }
 }
