--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,61 @@
 version: "3.9"
 services:
+  gateway:
+    build:
+      context: .
+      dockerfile: ./backend/Gateway/Dockerfile
+    ports:
+      - "80:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80
+      - Consul:Host=http://consul:8500
+    depends_on:
+      - consul
+      - userservice
+      - bookingservice
+      - servicemanagementservice
+      - paymentservice
+      - notificationservice
+      - reportingservice
+      - slotmanagementservice
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  consul:
+    image: consul:1.9.0
+    ports:
+      - "8500:8500"
+      - "8600:8600/udp"
+    command: agent -server -bootstrap -ui -client=0.0.0.0
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8500/v1/status/leader"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   userservice:
     build:
       context: .
       dockerfile: ./backend/services/UserService/Dockerfile
-    ports:
-      - "5000:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80 # Expose port 80 internally
+      - Consul:Host=http://consul:8500
+      - Consul:ServiceName=UserService
     depends_on:
       - sqlserver
       - rabbitmq
+      - consul
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
       interval: 1m30s
       timeout: 10s
       retries: 3
@@ -23,15 +65,17 @@ services:
     build:
       context: .
       dockerfile: ./backend/services/BookingService/Dockerfile
-    ports:
-      - "5001:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80
+      - Consul:Host=http://consul:8500
+      - Consul:ServiceName=BookingService
     depends_on:
       - sqlserver
+      - consul
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
       interval: 1m30s
       timeout: 10s
       retries: 3
@@ -41,15 +85,17 @@ services:
     build:
       context: .
       dockerfile: ./backend/services/ServiceManagementService/Dockerfile
-    ports:
-      - "5002:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80
+      - Consul:Host=http://consul:8500
+      - Consul:ServiceName=ServiceManagementService
     depends_on:
       - sqlserver
+      - consul
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5002/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
       interval: 1m30s
       timeout: 10s
       retries: 3
@@ -59,15 +105,17 @@ services:
     build:
       context: .
       dockerfile: ./backend/services/PaymentService/Dockerfile
-    ports:
-      - "5003:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80
+      - Consul:Host=http://consul:8500
+      - Consul:ServiceName=PaymentService
     depends_on:
       - sqlserver
+      - consul
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5003/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
       interval: 1m30s
       timeout: 10s
       retries: 3
@@ -77,15 +125,17 @@ services:
     build:
       context: .
       dockerfile: ./backend/services/NotificationService/Dockerfile
-    ports:
-      - "5004:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80
+      - Consul:Host=http://consul:8500
+      - Consul:ServiceName=NotificationService
     depends_on:
       - sqlserver
+      - consul
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5004/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
       interval: 1m30s
       timeout: 10s
       retries: 3
@@ -95,15 +145,17 @@ services:
     build:
       context: .
       dockerfile: ./backend/services/ReportingService/Dockerfile
-    ports:
-      - "5005:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80
+      - Consul:Host=http://consul:8500
+      - Consul:ServiceName=ReportingService
     depends_on:
       - sqlserver
+      - consul
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5005/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
       interval: 1m30s
       timeout: 10s
       retries: 3
