--- a/shared/Shared.csproj
+++ b/shared/Shared.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Consul" Version="1.7.14.9" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="MassTransit" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
