feat: Implement Tenant CRUD and Super Admin management

--- a/tests/UserService.Tests/UserService.Tests.csproj
+++ b/tests/UserService.Tests/UserService.Tests.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.9" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,7 +26,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\backend\services\UserService\UserService.csproj" />
-    <ProjectReference Include Include="..\..\backend\services\AuthenticationService\AuthenticationService.csproj" />
     <ProjectReference Include="..\..\shared\Shared.csproj" />
   </ItemGroup>
 
