Update OpenAPI documentation for multi-tenant login flow and tenant management. Updated changelog.md with API documentation update timestamp.

--- a/docs/API/OpenAPI/common/enums.yaml
+++ b/docs/API/OpenAPI/common/enums.yaml
@@ -13,6 +13,7 @@ components:
         - Customer
         - Provider
         - Admin
+        - SuperAdmin
       example: Customer
 
     BookingStatus:
