--- a/Tasksmodified/Frontend/FE-004-03_create_navigation_components.json
+++ b/Tasksmodified/Frontend/FE-004-03_create_navigation_components.json
@@ -57,10 +57,13 @@
   ],
   "related_files": {
     "will_create": [
-      "frontend/src/app/components/layout/header.component.ts",
-      "frontend/src/app/components/layout/sidebar.component.ts",
-      "frontend/src/app/components/layout/footer.component.ts",
-      "frontend/src/app/components/navigation/main-nav.component.ts"
+      "frontend/AppointmentSaas/src/app/components/layout/header.component.ts",
+      "frontend/AppointmentSaas/src/app/components/layout/sidebar.component.ts",
+      "frontend/AppointmentSaas/src/app/components/layout/footer.component.ts",
+      "frontend/AppointmentSaas/src/app/components/navigation/main-nav.component.ts",
+      "frontend/AppointmentSaas/src/app/components/layout/customer-sidebar.component.ts",
+      "frontend/AppointmentSaas/src/app/components/layout/tenant-admin-sidebar.component.ts",
+      "frontend/AppointmentSaas/src/app/components/layout/system-admin-sidebar.component.ts"
     ],
     "will_modify": [],
     "dependencies": [
@@ -105,9 +108,9 @@
     "can_start_date": "After FE-002 and FE-004-01 completion"
   },
   "additional_context": {
-    "technical_notes": "Follow Angular best practices for component development. Ensure responsive design for all navigation components. Implement proper state management for navigation elements.",
+    "technical_notes": "Follow Angular best practices for component development. Ensure responsive design for all navigation components. Implement proper state management for navigation elements. Create distinct sidebar components for Customer, Tenant Admin, and System Admin roles, or a single smart component that renders based on user role.",
     "design_references": "docs/UI/Requirements.mmd, docs/UI/ComponentLibrary.mmd",
-    "security_considerations": "Ensure navigation components don't expose sensitive information about user roles or system structure"
+    "security_considerations": "Ensure navigation components don't expose sensitive information about user roles or system structure. Implement proper authorization for displayed navigation items."
   },
   "implementation_guidance": {
     "method_signatures": [],
@@ -122,10 +125,13 @@
     "optional_subtasks": [],
     "minimum_completion_percentage": 100,
     "required_deliverables": [
-      "frontend/src/app/components/layout/header.component.ts",
-      "frontend/src/app/components/layout/sidebar.component.ts",
-      "frontend/src/app/components/layout/footer.component.ts",
-      "frontend/src/app/components/navigation/main-nav.component.ts"
+      "frontend/AppointmentSaas/src/app/components/layout/header.component.ts",
+      "frontend/AppointmentSaas/src/app/components/layout/sidebar.component.ts",
+      "frontend/AppointmentSaas/src/app/components/layout/footer.component.ts",
+      "frontend/AppointmentSaas/src/app/components/navigation/main-nav.component.ts",
+      "frontend/AppointmentSaas/src/app/components/layout/customer-sidebar.component.ts",
+      "frontend/AppointmentSaas/src/app/components/layout/tenant-admin-sidebar.component.ts",
+      "frontend/AppointmentSaas/src/app/components/layout/system-admin-sidebar.component.ts"
     ]
   },
   "subtasks": []
