--- a/shared/Shared.csproj
+++ b/shared/Shared.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10" />
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
