--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   gateway:
     build:
@@ -150,6 +149,86 @@ services:
       - ASPNETCORE_HTTP_PORT=80
       - Consul:Host=http://consul:8500
       - Consul:ServiceName=ReportingService
+    depends_on:
+      - sqlserver
+      - consul
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  slotmanagementservice:
+    build:
+      context: .
+      dockerfile: ./backend/services/SlotManagementService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80
+      - Consul:Host=http://consul:8500
+      - Consul:ServiceName=SlotManagementService
+    depends_on:
+      - sqlserver
+      - consul
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  configurationservice:
+    build:
+      context: .
+      dockerfile: ./backend/services/ConfigurationService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80
+      - Consul:Host=http://consul:8500
+      - Consul:ServiceName=ConfigurationService
+    depends_on:
+      - sqlserver
+      - consul
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  tenantmanagementservice:
+    build:
+      context: .
+      dockerfile: ./backend/services/TenantManagementService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80
+      - Consul:Host=http://consul:8500
+      - Consul:ServiceName=TenantManagementService
+    depends_on:
+      - sqlserver
+      - consul
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  authenticationservice:
+    build:
+      context: .
+      dockerfile: ./backend/services/AuthenticationService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=80
+      - Consul:Host=http://consul:8500
+      - Consul:ServiceName=AuthenticationService
     depends_on:
       - sqlserver
       - consul
