--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - Consul:Host=http://consul:8500
     depends_on:
       - consul
+      - migration-runner
       - userservice
       - bookingservice
       - servicemanagementservice
@@ -18,6 +19,9 @@ services:
       - notificationservice
       - reportingservice
       - slotmanagementservice
+      - configurationservice
+      - tenantmanagementservice
+      - authenticationservice
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/healthz"]
@@ -259,6 +263,17 @@ services:
       - sqlserver_data:/var/opt/mssql
       - ./database-scripts:/database-scripts
     command: /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "$$SA_PASSWORD" -i /database-scripts/setup.sql
+
+  migration-runner:
+    build:
+      context: .
+      dockerfile: ./database-scripts/Dockerfile.migration
+    environment:
+      - SA_PASSWORD=MySuperSecretPassword123!
+    depends_on:
+      sqlserver:
+        condition: service_healthy
+    restart: "no"  # Run once and exit
 
   prometheus:
     image: prom/prometheus:latest
