Configure Hangfire to use separate database in Docker environment

--- a/backend/services/NotificationService/appsettings.Development.json
+++ b/backend/services/NotificationService/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqlserver;Database=AppointmentScheduler;User Id=sa;Password=MySuperSecretPassword123!;TrustServerCertificate=true",
+    "HangfireConnection": "Server=sqlserver;Database=HangfireDb;User Id=sa;Password=MySuperSecretPassword123!;TrustServerCertificate=true"
   }
 }
